editted some code decoration

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Its my first resume.</h1>
 
-    <nav  class="nav-brand container">
-        <div>IAmDeveloper</div>
+    <nav  class=" nav container">
+        <div class="nav-brand">IAmDeveloper</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-inline">
                 <a class="link" href="/">home</a>
@@ -28,11 +28,11 @@
     <h3 class="header-title">My First Html Code with CSS</h3>
     
 
-    <section class="sections ow" >
-        <h3>Technologies</h3>
+    <section class="sections ow container container-fluid" >
+        <h3 >Technologies</h3>
         <p class="secdata">C, C++, JAVA, JAVASCRIPT, HTML5, CSS, Git, Web Hosting</p>
     </section>
-    <section class="sections ow">
+    <section class="sections ow container container-fluid  ">
         <h3>Projects</h3>
         <p class="secdata">Worked on Project "Sustainable Role Playing using Android Application" with the company 'TryCosys Pvt Lmt'</p>
     </section>
