--- a/blogs.html
+++ b/blogs.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href ="style.css" rel="stylesheet">
     <title>My blogs</title>
 </head>
 <body>
-    <h2>My blogs</h2>
+    <nav  class=" nav container">
+        <div class="nav-brand">IAmDeveloper</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-inline">
+                <a class="link" href="/">home</a>
+            </li>
+            <li class="list-inline">
+                <a  class="link" href="projects.html">projects</a>
+            </li>
+                <li class="list-inline">
+                <a class="link link-active" href="blogs.html">blogs</a>
+            </li>
+        </ul>
+    </nav>
+    <p> Here are my some blogs</p>
 </body>
 </html>
