--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href ="style.css" rel="stylesheet">
-    <title>My Resume</title>
 </head>
 <body>
-    <h1>Its my first resume.</h1>
-
+    
     <nav  class=" nav container">
         <div class="nav-brand">IAmDeveloper</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-inline">
-                <a class="link" href="/">home</a>
+                <a class="link link-active" href="/">home</a>
             </li>
             <li class="list-inline">
-                <a  class="link"href="projects.html">projects</a>
+                <a  class="link" href="projects.html">projects</a>
             </li>
                 <li class="list-inline">
                 <a class="link" href="blogs.html">blogs</a>
@@ -30,11 +28,11 @@
 
     <section class="sections ow container container-fluid" >
         <h3 >Technologies</h3>
-        <p class="secdata">C, C++, JAVA, JAVASCRIPT, HTML5, CSS, Git, Web Hosting</p>
+        <p>C, C++, JAVA, JAVASCRIPT, HTML5, CSS, Git, Github, VSCode, Web Hosting</p>
     </section>
     <section class="sections ow container container-fluid  ">
         <h3>Projects</h3>
-        <p class="secdata">Worked on Project "Sustainable Role Playing using Android Application" with the company 'TryCosys Pvt Lmt'</p>
+        <p>Worked on Project "Sustainable Role Playing using Android Application" with the company 'TryCosys Solutions Pvt Lmt,Pune'</p>
     </section>
 
 
