--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,20 @@
 
 </head>
 <body>
-    <h2>My projects</h2>
+    <nav  class=" nav container">
+        <div class="nav-brand">IAmDeveloper</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-inline">
+                <a class="link" href="/">home</a>
+            </li>
+            <li class="list-inline">
+                <a  class="link link-active" href="projects.html">projects</a>
+            </li>
+                <li class="list-inline">
+                <a class="link" href="blogs.html">blogs</a>
+            </li>
+        </ul>
+    </nav>
+    <p> here are my some projects</p>
 </body>
 </html>
